# opres

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg  setup.py
examples/: option.py  result.py
opres/: __init__.py  option.py  result.py
tests/: test_option.py  test_result.py
