[metadata]
name = opres
version = 0.1.0
license_file = LICENSE
author = "Nkriskeeic"

[options]
package_dir=
    = .
packages = find:
zip_safe = False
python_requires = >=3.7.0
test_suite = tests

[options.packages.find]
where = .
exclude =
    examples
    tests


[options.package_data]
opres = examples/*.txt

[options.extras_require]
dev =
    mypy
    flake8

